# libkate

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.in  THANKS  aclocal.m4  autogen.sh  configure  configure.ac  project.config
contrib/: README
diffs/: README  abraca-with-lyrics.diff  audacious-plugins-1.5.1-with-kate-lyrics.diff  audacious-plugins-hg.diff  azrael-with-lyrics.diff  blastwave-with-lyrics.diff  browser_plugin-with-kate.diff  ffmpeg-with-kate.diff  ffmpeg2theora-svn-kate.diff  gst-plugins-bad-with-kate.diff  gst-plugins-base-with-kate.diff  gst-plugins-good-with-kate.diff  gst2ogg-subtitles.diff  gxine-with-lyrics.diff  gxmms2-with-lyrics.diff  icecast-2.3.1-with-kate.diff  icecast-svn-with-kate.diff  kuechenstation-with-lyrics.diff  liboggplay-with-tiger.diff  libshout-2.2.2-with-kate.diff  libshout-svn-with-kate.diff  magic.diff  mkvtoolnix-2.1.0-kate.diff  mkvtoolnix-svn-kate.diff  mplayer-svn.diff  oggconvert-subtitles.diff  oggenc-with-kate-lyrics.diff  oggmerge.diff  oggsplit.diff  oggz_kate.diff  promoe.diff  subtle-with-kate.diff  thoggen-with-kate.diff  vlc-with-kate.diff  vorbis-tools-1.2.0-with-kate.diff  xine-lib-1.1.12-with-kate.diff  xine-lib-1.1.9.1-with-kate.diff  xine-lib-1.2-with-kate.diff  xine-ui-0.99.5-synced-lyrics.diff  xmms-1.2.11-with-kate-kyrics.diff  (+1 more)
doc/: Makefile.am  Makefile.in  README  index.html  kate-HOWTO.doc  kate-category.doc  kate-errors.doc  kate-format-32v.doc  kate-format-bitmap.doc  kate-format-bitmaps-data.doc  kate-format-color.doc  kate-format-curve.doc  kate-format-curves-header.doc  kate-format-end-data.doc  kate-format-font-range.doc  kate-format-font-ranges-data.doc  kate-format-fp.doc  kate-format-id-header.doc  kate-format-keepalive-data.doc  kate-format-metadata.doc  kate-format-motion.doc  kate-format-motions-header.doc  kate-format-palette.doc  kate-format-palettes-header.doc  kate-format-region.doc  kate-format-regions-data.doc  kate-format-rle-bitmap.doc  kate-format-style.doc  kate-format-styles-header.doc  kate-format-text-data.doc  kate-format-vorbis-comment-header.doc  kate-format-warp.doc  kate-format.doc  kate-granule.doc  kate-main.doc  kate-support.doc  kate.doxygen  kate.doxygen.in
doc/man/: KateDJ.1.in  katalyzer.1.in  katedec.1.in  kateenc.1.in
examples/: README
examples/kate/: bom.kate  bspline.kate  counter.kate  demo.kate  empty.kate  font.kate  granule.kate  justify.kate  karaoke.kate  kate.kate  markup.kate  metadata.kate  minimal.kate  path.kate  periodic.kate  png.kate  style.kate  unicode.kate  utf8test.kate  z.kate
examples/src/: common.c  common.h  decoding.c  encoding.c  high.c
include/: config.h.in
include/kate/: kate.h  kate.h.in  kate_config.h  oggkate.h
misc/pkgconfig/: kate-uninstalled.pc  kate-uninstalled.pc.in  kate.pc  kate.pc.in  oggkate-uninstalled.pc  oggkate-uninstalled.pc.in  oggkate.pc  oggkate.pc.in
pkg/pkgconfig/: kate-uninstalled.pc  kate.pc  oggkate.pc
src/: kate.c  kate_bitwise.c  kate_bitwise.h  kate_comment.c  kate_config.h  kate_decode.c  kate_decode_state.c  kate_decode_state.h  kate_encode.c  kate_encode_state.c  kate_encode_state.h  kate_event.c  kate_font.c  kate_fp.c  kate_fp.h  kate_granule.c  kate_high.c  kate_info.c  kate_internal.h  kate_meta.c  kate_meta.h  kate_motion.c  kate_ogg.c  kate_packet.c  kate_rle.c  kate_rle.h  kate_text.c  kate_tracker.c
tests/: Makefile.am  Makefile.in  bitwise.c  check_sizes.c  gen_lrc.c  gen_srt.c  language.c  metadata.c  overflow.c  text.c
tools/: Makefile.am  Makefile.in  decoder.c  encoder.c  katalyzer.c  kate_lexer.c  kate_lexer.l  kate_parser.c  kate_parser.h  kate_parser.output  kate_parser.y  katedec.c  katedesc.h  katedesc.l  katedesc.y  kateenc.c  kfuzz.c  kfuzz.h  kkate.c  kkate.h  klrc.c  klrc.h  kpng.c  kpng.h  kread.c  kread.h  ksrt.c  ksrt.h  kstats.c  kstats.h  kstream.c  kstream.h  kstrings.c  kstrings.h  kutil.c  kutil.h
tools/KateDJ/: KateDJ  Makefile.am  Makefile.in  README
tools/KateDJ/kdj/: __init__.py  constants.py  constants.py.in  demuxer.py  finder.py  muxer.py  options.py  tester.py  tools.py  ui_editor.py  ui_main.py  ui_options.py
